# aw

./: CMakeLists.txt  README.md  config.h.in
cmake/: azure-storage-lite.cmake
include/: azure-storage-wrapper.h
src/: azure-storage-blob-client.h  azure-storage-uploader.cpp  azure-storage-wrapper.cpp  base64-decoder.cpp  base64-decoder.h
tools/examples/: azure-storage-client.py
